gcc/testsuite/gcc.dg/spellcheck-options-19.c
/* { dg-do compile } */
/* { dg-options "-fno-sanitize" } */
/* { dg-error "unrecognized command-line option '-fno-sanitize'; did you mean '-fno-sanitize='?"  "" { target *-*-* } 0 } */
